added repositories for jenkins artifacts

--- a/pom.xml
+++ b/pom.xml
@@ -37,4 +37,22 @@
           <version>4.12</version>
       </dependency>
   </dependencies>
+
+    <!-- Added Repositories to be able to build project on TravisCI -->
+    <repositories>
+        <repository>
+            <id>repo.jenkins-ci.org</id>
+            <url>http://repo.jenkins-ci.org/public/</url>
+        </repository>
+        <repository>
+            <id>sonatype-forge</id>
+            <url>https://repository.sonatype.org/content/groups/forge/</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>repo.jenkins-ci.org</id>
+            <url>http://repo.jenkins-ci.org/public/</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
