--- a/scripts/build.gradle
+++ b/scripts/build.gradle
@@ -33,7 +33,7 @@ repositories {
 
 
 version = "1.1.10"
-
+println new File('../target/enforce-jenkins-plugin.hpi').absolutePath
 /*
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
