--- a/scripts/build.gradle
+++ b/scripts/build.gradle
@@ -33,7 +33,10 @@ repositories {
 
 
 version = "1.1.10"
-println new File('../target/enforce-jenkins-plugin.hpi').absolutePath
+def hpi = new File('target/enforce-jenkins-plugin.hpi')
+if(hpi.exists()){
+    println hpi.absolutePath + " exists"
+}
 /*
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
