--- a/scripts/build.gradle
+++ b/scripts/build.gradle
@@ -3,6 +3,9 @@
  * Licensed under the MIT license. See LICENSE file in the project root for full license information.
  */
 apply plugin: 'com.jfrog.bintray'
+apply plugin: 'maven-publish'
+apply plugin: 'maven'
+apply plugin: 'java'
 
 
 buildscript {
@@ -13,10 +16,6 @@ buildscript {
     dependencies {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.1'
     }
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.0'
 }
 
 repositories {
