code review comments was applied

--- a/scripts/gradle.properties
+++ b/scripts/gradle.properties
@@ -3,3 +3,4 @@ bintray_repo=enforce
 bintray_package=enforce-jenkins-plugin
 bintray_user_org=fundacionjala
 bintray_path=org/fundacionjala/gradle/plugins/enforce/enforce-gradle-plugin/
+jenkins_hpi_path=target/enforce-jenkins-plugin.hpi
