--- a/scripts/build.gradle
+++ b/scripts/build.gradle
@@ -24,19 +24,19 @@ buildscript {
 
 def major = "$System.env.VERSION_NUMBER_MAJOR"
 def minor = "$System.env.VERSION_NUMBER_MINOR"
-def path = "$System.env.VERSION_NUMBER_PATCH"
-def newVersion = "$major.$minor.$path"
-version = newVersion
-def hpiFile = new File('target/enforce-jenkins-plugin.hpi')
+def patch = "$System.env.VERSION_NUMBER_PATCH"
+def newVersion = "$major.$minor.$patch"
+String hpiPath = jenkins_hpi_path
+def hpiFile = new File(hpiPath)
 bintray {
     user = "$System.env.BINTRAY_USER_NAME"
     key = "$System.env.BINTRAY_API_KEY"
 
     publications = ['mavenJava']
-         filesSpec {
-          from hpiFile.absolutePath
-          into "${bintray_path}${version}"
-        }
+    filesSpec {
+        from hpiFile.absolutePath
+        into "${bintray_path}${newVersion}"
+    }
     dryRun = false
     publish = true
     pkg {
