--- a/scripts/build.gradle
+++ b/scripts/build.gradle
@@ -26,6 +26,7 @@ def major = "$System.env.VERSION_NUMBER_MAJOR"
 def minor = "$System.env.VERSION_NUMBER_MINOR"
 def patch = "$System.env.VERSION_NUMBER_PATCH"
 def newVersion = "$major.$minor.$patch"
+version = newVersion
 String hpiPath = jenkins_hpi_path
 def hpiFile = new File(hpiPath)
 bintray {
