--- a/scripts/build.gradle
+++ b/scripts/build.gradle
@@ -22,6 +22,47 @@ buildscript {
     }
 }
 
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
+}
+
+repositories {
+    mavenCentral()
+    jcenter()
+}
+
+
+version = "1.0.5"
+def hpi = new File('target/enforce-jenkins-plugin.hpi')
+if(hpi.exists()){
+    println hpi.absolutePath + " exists"
+}else{
+    println "$hpi.absolutePath doesn't exists"
+}
+/*
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            if (plugins.hasPlugin('war')) {
+                from components.web
+            } else {
+                from components.java
+            }
+            artifact sourcesJar
+        }
+    }
+}*/
+
 def major = "$System.env.VERSION_NUMBER_MAJOR"
 def minor = "$System.env.VERSION_NUMBER_MINOR"
 def patch = "$System.env.VERSION_NUMBER_PATCH"
