--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   </parent>
   <groupId>org.fundacionjala.jenkins.plugins.enforce</groupId>
   <artifactId>enforce-jenkins-plugin</artifactId>
-  <version>1.0.3</version>
+  <version>1.0.4</version>
   <packaging>hpi</packaging>
 
   <name>EnForce Jenkins Plugin</name>
@@ -35,6 +35,16 @@
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
           <version>4.12</version>
+      </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.plugins</groupId>
+          <artifactId>junit</artifactId>
+          <version>1.8</version>
+      </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.plugins</groupId>
+          <artifactId>token-macro</artifactId>
+          <version>1.10</version>
       </dependency>
   </dependencies>
 
